<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_month_view"
            android:icon="@drawable/ic_month_black_24dp"
            android:title="@string/month_view" />
        <item
            android:id="@+id/nav_year_view"
            android:icon="@drawable/ic_year_black_24dp"
            android:title="@string/year_view" />

        <item
            android:id="@+id/nav_month_chart_view"
            android:icon="@drawable/ic_month_chart_black_24dp"
            android:title="@string/month_chart_view" />

        <item
            android:id="@+id/nav_year_chart_view"
            android:icon="@drawable/ic_year_chart_black_24dp"
            android:title="@string/year_chart_view" />
    </group>

    <item android:title="기타">
        <menu>
            <item
                android:id="@+id/nav_donation"
                android:icon="@drawable/ic_run_donation_24dp"
                android:title="@string/nav_donation" />
            <item
                android:id="@+id/nav_donation_history"
                android:icon="@drawable/ic_donation_history_24dp"
                android:title="@string/nav_donation_history" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_regist_donation"
                android:icon="@drawable/ic_dbbackup_24dp"
                android:title="@string/regist_donation" />
            <item
                android:id="@+id/nav_donation_info"
                android:icon="@drawable/ic_donation_info_24dp"
                android:title="@string/nav_donation_info" />
            <item
                android:id="@+id/nav_db_init"
                android:icon="@drawable/ic_dbinit_24dp"
                android:title="@string/db_init" />
            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_about_black_24dp"
                android:title="@string/nav_license" />
            <item
                android:id="@+id/nav_app_permission"
                android:icon="@drawable/ic_permission_black_24dp"
                android:title="@string/activity_title_app_permission" />
        </menu>
    </item>

</menu>
