<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_popup_top"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/popup" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="-10dp"
            android:background="@drawable/dialog_title"
            android:gravity="center"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/cellborder"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:padding="5dp"
                android:src="@drawable/googleplus_icon" />

            <TextView
                android:id="@+id/des"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|fill_horizontal"
                android:padding="5dp"
                android:text="@string/des_label"
                android:textColor="@color/title_color"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/round_popup_bottom"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/settingsOKButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/round_popup_bottom"
            android:gravity="center"
            android:text="@string/okbutton"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>