<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_popup_top"
        android:gravity="center_vertical"
        android:orientation="vertical"

        android:padding="10dp">

        <TextView
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/dialog_title"
            android:gravity="center"
            android:text="인증이 필요합니다."
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/edit_title1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/round_popup"
            android:gravity="center"
            android:padding="5dp"
            android:text="후원 계좌로 이체하기 위한 인증번호 숫자 6자리를 입력해주세요."
            android:textColor="@android:color/white"
            android:textSize="16dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_rectangle_bg"
            android:padding="10dp"
            android:stretchColumns="2">

            <TableRow
                android:id="@+id/pwdrow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/row_border">

                <TextView
                    android:id="@+id/lblpwd0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="@string/setting_trans_pwd0"
                    android:textColor="@color/title_color"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/orgpwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_box"
                    android:enabled="false"
                    android:gravity="fill_horizontal"
                    android:inputType="number|textPassword"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:password="true"
                    android:textColor="@color/red"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/row_border">

                <TextView
                    android:id="@+id/lblpwd1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="@string/setting_trans_pwd"
                    android:textColor="@color/title_color"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/pwd1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_box"
                    android:enabled="false"
                    android:gravity="fill_horizontal"
                    android:inputType="number|textPassword"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:password="true"
                    android:textColor="@color/red"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/row_border">

                <TextView
                    android:id="@+id/lblpwd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:padding="10dp"
                    android:text="@string/setting_trans_pwd"
                    android:textColor="@color/title_color"
                    android:textSize="12dp" />

                <EditText
                    android:id="@+id/pwd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/edit_box"
                    android:enabled="false"
                    android:gravity="fill_horizontal"
                    android:inputType="number|textPassword"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:password="true"
                    android:textColor="@color/red"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="12dp" />
            </TableRow>

            <TableRow
                android:id="@+id/authmsgrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/donation_border"
                android:gravity="center">

                <TextView
                    android:id="@+id/authmsg"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_span="7"
                    android:gravity="center"
                    android:text="@string/mismatchpwd"
                    android:textColor="@color/red"
                    android:textSize="12dp"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:background="@drawable/row_border">

                <Button
                    android:id="@+id/btnshowpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_span="2"
                    android:layout_weight="1"
                    android:background="@drawable/button_box"
                    android:drawableLeft="@drawable/ic_visibility_white_24dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/showpwd"
                    android:textColor="@color/colorWhite"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_popup_bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_box_round_bottom"
            android:gravity="center"
            android:text="@string/cancelButton"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/OKButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/button_box_round_bottom"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/okbutton"
            android:textColor="@color/red"
            android:textSize="16dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>