<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activity.SmsListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/month_table"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:background="@color/red"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal">

                <ImageButton
                    android:id="@+id/month_BtnPrevious"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="left|center_vertical"
                    android:background="@android:color/transparent"
                    android:contentDescription="TODO"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_left" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/month_LblTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="1월 지출 합계"
                            android:textColor="#ffff"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/month_LblTerm"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="18.01.01 ~ 18.01.31"
                            android:textColor="#f8a1a1"
                            android:textSize="14sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/month_LblGrandTotal"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="237,390원"
                            android:textColor="#ffff"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </TableRow>

                </TableLayout>

                <ImageButton
                    android:id="@+id/month_BtnNext"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="right|center_vertical"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_right" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/monthdetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/lblCardList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/chartborder"
                android:gravity="center_vertical|left"
                android:padding="10dp"
                android:text="@string/cardListStat"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ListView
                android:id="@+id/month_cardlist"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/list_border"
                android:divider="@color/table_data_row_odd"
                android:dividerHeight="1dp"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/nocard"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/list_border"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:textColor="@color/strikethru"
                android:text="@string/nocard"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblDateList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@color/chartborder"
                android:gravity="center_vertical|left"
                android:padding="10dp"
                android:text="@string/cardDateList"
                android:textSize="14sp"
                android:textStyle="bold" />

            <org.blogsite.youngsoft.piggybank.data.CardTableView
                android:id="@+id/month_tableView"
                tableView_columnCount="4"
                android:background="@drawable/card_list_box"
                tableView_headerElevation="10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alwaysDrawnWithCache="false"
                android:drawingCacheQuality="high">
            </org.blogsite.youngsoft.piggybank.data.CardTableView>

            <TextView
                android:id="@+id/nodata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:background="@drawable/list_border"
                android:gravity="center_vertical|center_horizontal"
                android:padding="10dp"
                android:textColor="@color/strikethru"
                android:text="@string/nocard"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
